update doc (#2939)